--- a/my-portfolio/src/authentication/Styles/Sign.css
+++ b/my-portfolio/src/authentication/Styles/Sign.css
@@ -41,3 +41,12 @@
     align-items: center;
     width : 55vw
 }
+
+.Dashboard_button {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width : 30vw;
+    height : 20vh
+}
